# simple_moving_average

./: CMakeLists.txt  CMakeLists.txt.gtest.in  performance.xlsx  readme.md
src/: main.cpp
src/simple_moving_average/: SimpleMovingAverage.cpp  SimpleMovingAverage.h  simple_moving_average.h
src/tests/: simple_moving_average_unittests.cpp
src/utils/: utils.h
